# NeuroContextOS

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  remove-large-files.txt  settings.gradle.kts
.github/workflows/: android-ci.yml  cmake-native.yml  lint.yml  release-apk.yml
apps/android/: build.gradle.kts  proguard-rules.pro
apps/android/src/androidTest/java/com/cortexn/app/: E2EFlowsTest.kt
apps/android/src/main/: AndroidManifest.xml
apps/android/src/main/java/com/cortexn/app/: BuildConfigKeys.kt  CortexNApplication.kt  MainActivity.kt  NavGraph.kt
apps/android/src/main/java/com/cortexn/app/agents/: AsrAgent.kt  AudioGenAgent.kt  PredictorAgent.kt  VisionAgent.kt
apps/android/src/main/java/com/cortexn/app/policy/: PromptSchemas.kt  SapiensPlanner.kt
apps/android/src/main/java/com/cortexn/app/privacy/: DP.kt  FLGossip.kt  SecAgg.kt
apps/android/src/main/java/com/cortexn/app/services/: AURARouterService.kt  AudioGenService.kt  CortexNReflexService.kt  PowerProfilerService.kt  WifiDirectService.kt
apps/android/src/main/java/com/cortexn/app/ui/: FitnessScreen.kt  FocusScreen.kt  HomeScreen.kt  TouristScreen.kt
apps/android/src/main/java/com/cortexn/app/ui/components/: BufferMeter.kt  TelemetryOverlay.kt
apps/android/src/main/java/com/cortexn/app/util/: AudioFocus.kt  CpuFeatures.kt  Permissions.kt
apps/android/src/main/res/drawable/: ic_launcher_foreground.xml
apps/android/src/main/res/layout/: activity_main.xml  fragment_focus.xml
apps/android/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/android/src/main/res/xml/: data_extraction_rules.xml
apps/android/src/test/java/com/cortexn/app/: UnitSmokeTest.kt
modules/agents-asr-whisper/: build.gradle.kts
modules/agents-asr-whisper/src/main/java/com/cortexn/agents/asr/: AudioIO.kt  WhisperRunner.kt
modules/agents-predictor/: build.gradle.kts
modules/agents-predictor/src/main/java/com/cortexn/agents/predictor/: NextAppPredictor.kt
modules/agents-vision-yolo/: build.gradle.kts
modules/agents-vision-yolo/src/main/java/com/cortexn/agents/vision/: YoloPrePost.kt  YoloRunner.kt
modules/audiogen-lite/: CMakeLists.txt  build.gradle.kts
modules/audiogen-lite/src/main/cpp/: audiogen.cpp  jni_bridge.cpp  ring_buffer.cpp  ring_buffer.h
modules/audiogen-lite/src/main/cpp/include/: audiogen.h
modules/audiogen-lite/src/main/java/com/cortexn/audiogen/: AudioGen.kt  AudioGenService.kt  PromptSchema.kt
modules/aura-runtime/: build.gradle.kts
modules/aura-runtime/src/main/java/com/cortexn/aura/: AURARouter.kt  TaskSpec.kt
modules/aura-runtime/src/main/java/com/cortexn/aura/backends/: ExecuTorchBackend.kt  InferenceBackend.kt  NNAPIBackend.kt  ORTBackend.kt
modules/aura-runtime/src/main/java/com/cortexn/aura/qos/: EnergyBudget.kt  LatencySLO.kt
modules/aura-runtime/src/main/java/com/cortexn/aura/telemetry/: PmuReader.kt  RailsSampler.kt
modules/cortexn-snn/: CMakeLists.txt  build.gradle.kts
modules/cortexn-snn/src/main/cpp/: cortexn_snn.cpp  lif_layer.cpp  spike_encoder.cpp
modules/cortexn-snn/src/main/cpp/include/: cortexn_snn.h  spike_encoder.h
modules/cortexn-snn/src/main/cpp/kernels/: sme2_bench.cpp  spike_dense_neon.S  spike_dense_neon.cpp  spike_dense_sme2.cpp
modules/cortexn-snn/src/main/cpp/utils/: ring_buffer.h
modules/cortexn-snn/src/main/java/com/cortexn/cortexn/: CortexNReflex.kt
modules/privacy-core/: CMakeLists.txt  build.gradle.kts
modules/privacy-core/src/main/cpp/: CMakeLists.txt  seal_jni.cpp
modules/privacy-core/src/main/java/com/cortexn/privacy/: DifferentialPrivacy.kt  FederatedGossip.kt  SecureAggregation.kt  WifiDirectManager.kt
native/: CMakePresets.json
native/microbench/: README.md  run.sh  sme2_vs_neon_gemm.cpp
native/toolchains/: android-ndk.cmake
scripts/: collect_metrics.py  convert_stable_audio_to_litert.py  convert_yolov8_tiny_onnx.sh  export_llama32_executorch.py  export_whisper_tiny_pte.py  fetch_models.sh  measure_power.sh  run_armie_sme2.sh  run_fvp_client.sh  setup_android_sdk_ndk.sh  train_snn_gestures.py
scripts/utils/: audio_lufs_normalize.py  check_cpu_features.py
